2004-07-16  Larry Ewing  <lewing@ximian.com>

	* gui/calendar-component.c (set_info): use short month forms to
	limit the maximum width of the label.

2004-07-15  Rodrigo Moya <rodrigo@novell.com>

	Fixes #57142

	* gui/e-day-view.c (e_day_view_on_editing_stopped): commit the
	sequence on the object before sending it to the backend.
	(e_day_view_add_event): s/abort_sequence/commit_sequence.

	* gui/e-week-view.c (e_week_view_on_editing_stopped): commit the
	sequence here also.
	(e_week_view_add_event): s/abort_sequence/commit_sequence.

	* gui/comp-util.c (cal_comp_event_new_with_current_time): don't
	commit the sequence here.

2004-07-14  JP Rosevear  <jpr@novell.com>
 
 	Fixes #61572
 	
 	* gui/dialogs/schedule-page.c (times_changed_cb): call notify
 	changed
 
 	* gui/dialogs/comp-editor.c (page_summary_changed_cb): no need to
 	mark the editor changed here, it doesn't do the right thing anyhow
 	(page_dates_changed_cb): ditto
 	
2004-07-14  JP Rosevear  <jpr@novell.com>

	Fixes #60678
	
	* gui/dialogs/cancel-comp.c (cancel_component_dialog): flip the
	messages around, the "deleting" flag means something else is doing
	the deleting

2004-07-12  JP Rosevear  <jpr@novell.com>
 
 	Fixes #57287, 58748
 	
	* gui/tasks-component.c (source_added_cb): if the source was
 	added in the main calendar, select it because the user caused this
 	to happen by creating a task
 	(create_component_view): listen for source_added signal on the
 	tasks
 
 	* gui/gnome-cal.c (view_selection_changed_cb): if the user created
 	a task, make sure we are displaying the relevant event list
 	(set_timezone): set the default zone of the default client
 	(setup_widgets): listen for the user_created signal
 	(gnome_calendar_destroy): clean up default client
 	(client_cal_opened_cb): disconnect from the open signal
 	(default_client_cal_opened_cb): set the default client on the
 	models
 	(open_ecal): make the callback function a param